Fix CSS and alignment for items on the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,71 +1,85 @@
-body{
-	font-size: 20px;
-	color: #333;
-  font-weight: 300;
-  text-align: center;
-  background-color: #f8f6f0;
+body {
+    font-size: 20px;
+    color: #333;
+    font-weight: 300;
+    background-color: #f8f6f0;
 }
-h1{
-  font-weight: 300;
-  margin: 0px;
-  padding: 10px;
-  font-size: 20px;
-  background-color: #444;
-  color: #fff;
+
+header {
+    display: flex;
+    padding: 20px 35px;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
-a{
+
+header a {
+    padding-top: 17px;
+}
+
+.startdisplay {
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    flex-wrap: wrap;
+}
+
+h1 {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    margin: 0px;
+    font-size: 30px;
+}
+
+.startdisplay p{
+    padding: 20px;
+    text-align: center;
+}
+
+button {
+    font-size: 22px;
+    background-color: rgb(59, 0, 99);
+    color: #fff;
+    border: 0px;
+    border-radius: 12px;
+    padding: 10px;
+    cursor: pointer;
+    margin-bottom: 20px;
+}
+
+button:hover {
+    background-color: rgb(118, 0, 197);
+}
+
+.quiz-display{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.quiz-container {
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+    justify-content: left;
+    margin-top: 40px;
+    width: 45%;
+}
+
+#quiz{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    margin: 0px;
+    font-size: 30px;
     text-align: left;
+    padding-bottom: 50px;
 }
 
-#timer{
-    text-align: right;
-}
-.question{
-  font-size: 30px;
-  margin-bottom: 10px;
-}
-.answers {
-  margin-bottom: 20px;
-  text-align: left;
-  display: inline-block;
-}
-.answers label{
-  display: block;
-  margin-bottom: 10px;
-}
-button{
-	font-size: 22px;
-	background-color: #279;
-	color: #fff;
-	border: 0px;
-	border-radius: 3px;
-	padding: 20px;
-	cursor: pointer;
-	margin-bottom: 20px;
-}
-button:hover{
-	background-color: #38a;
-}
-
-
-
-
-
-.question-page{
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  z-index: 1;
-  opacity: 0;
-  transition: opacity 0.5s;
-}
-.active-question{
-  opacity: 1;
-  z-index: 2;
-}
-.quiz-container{
-  position: relative;
-  height: 200px;
-  margin-top: 40px;
+#answer{
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+    justify-content: left;
+    margin-top: 40px;
+    width: 100%;
+    border-top: 1px solid;
 }
